# mcpDev

./: .env  main.py  main2.py  pyproject.toml  testClient2.py  testPydantic.py  testllm.py
